2013-01-23  Ramon Casero  <rcasero@gmail.com>

	* matlab/PointsToolbox/surface_interpolation.m: (v0.2.1)

	- Update syntax of argument checking code.

2012-11-13  Ramon Casero  <rcasero@gmail.com>

	* matlab/FiltersToolbox/scimat_lconvhull_smoothing.m: (v0.3.3)

	- Big speed up. We don't need to check the voxels that were
	already in the segmentation, because those will be in the local
	convex hull too. We now generate a list of background points that
	we check. This is much faster than using the cgal_insurftri
	"block"-mode, so maybe there's something we are doing wrong in
	terms of memory allocation or iteration in the mex function.

2012-10-19  Ramon Casero  <rcasero@gmail.com>

	* matlab/FiltersToolbox/mm_opening.m: (v0.1.1)
	* matlab/FiltersToolbox/gmthr_seg.m: (v0.5.2)
	* matlab/FiltersToolbox/bwrmsmallcomp.m: (v0.1.1)

	- Fix bug. All components except the first one were being ignored.

	* matlab/CardiacToolbox/tissue2lvrv.m: (v0.1.2)

	- Fix bug. All background components except the largest one were
	being ignored.

2012-10-17  Ramon Casero  <rcasero@gmail.com>

	* matlab/CardiacToolbox/tissue2lvrv.m: (v0.1.1)

	- Instead of using only one voxel to find the bottom background
	component, and one voxel for the top background component, we now
	consider as background any connected component that touches any of
	the sides of the image.

2012-10-11  Ramon Casero  <rcasero@gmail.com>

	* release 0.8.0

	- Quite a bit of code added since the last release. This release
	works in a fresh linux install. This version intentionally doesn't
	let the user build in Windows, because we don't have a way to
	build GMP and MPFR for Windows yet.

2012-10-10  Ramon Casero  <rcasero@gmail.com>

	* cpp/src/third-party/boost/CMakeLists.txt:
	* cpp/src/third-party/boost/ryppl/cmake/Modules/RypplExport.cmake:
	* cpp/src/third-party/boost/boost/thread/CMakeLists.txt:
	* cpp/src/third-party/boost/boost/date_time/CMakeLists.txt: